# zeropool-substrate-groth16-example

./: Cargo.toml  README.md  Readme.md
src/: alt_bn128.rs  lib.rs
zeropool-substrate-client/: .gitignore  README.md  package.json
zeropool-substrate-client/src/: NodeInfo.js
zeropool-substrate-client/src/config/: common.json
zeropool-substrate-devnet/: Makefile  README.md
zeropool-substrate-devnet/node/: Cargo.toml
zeropool-substrate-devnet/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
zeropool-substrate-devnet/pallets/zeropool-substrate/: Cargo.toml  build.sh
zeropool-substrate-devnet/pallets/zeropool-substrate/src/: alt_bn128.rs  lib.rs
zeropool-substrate-devnet/runtime/: Cargo.toml
zeropool-substrate-devnet/runtime/src/: lib.rs
zeropool-substrate-nodejs-client/: README.md  package.json  testapp.js
zeropool-substrate-nodejs-client/tests/: basic.test.js
