[package]
authors = ['Samuele Landi <samuele@landi.ae>']
description = 'Zeropool Pallet for private transaction'
edition = '2018'
homepage = 'https://zeropool.network'
license = 'Unlicense'
name = 'zeropool-substrate'
repository = 'https://github.com/zeropoolnetwork'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
base64 = { default-features = false, version = '0.13.0', features=["alloc"] }
primitive-types =  { default-features = false, version = '0.7.3'}
rand =  { default-features = false, version = '0.7.3'}
sp-runtime = { default-features = false, version = '2.0.0' }
alt_serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
ff-uint = {version="0.1.3", git="https://github.com/zeropoolnetwork/fawkes-crypto.git",branch = "feature/no-std", optional = false, default-features = false, features=["borsh_support"] }
ff-uint_derive = { version = "0.1.4", git="https://github.com/zeropoolnetwork/fawkes-crypto.git",optional=false,default-features=false,branch = "feature/no-std", features=["borsh_support"] }
borsh = { git = "https://github.com/zeropoolnetwork/borsh.git", rev = "62e6da830c4dab6ea0f876ad88e0ef6f777e25a6", default-features = false }

[dependencies.bn]
package = "zeropool-bn"
git ="https://github.com/zeropoolnetwork/bn.git"
branch="feature/no-std"
version = "0.5.7"
default-features = false
features = []

[dev-dependencies]
pretty_assertions = "0.4.0"


[features]
default = ["std", "borsh_support"]
borsh_support = []
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "ff-uint/std",
    "borsh/std"
]


